--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>basic calculator</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div class="container">
-      <input type="text" id="result " readonly />
+      <input type="text" id="result" readonly />
       <div class="buttons">
         <button class="clear">C</button>
         <button class="operator">/</button>
@@ -28,5 +29,7 @@
         <button class="decimal">.</button>
       </div>
     </div>
+
+    <script src="/js/main.js"></script>
   </body>
 </html>
